static/css/base.css
/* ... */
@media (max-width: 576px) {
    .hero-container  {
        background: url('https://res.cloudinary.com/games-exclusives/image/upload/v1665167349/media/background_image_small.jpg') no-repeat center center;
    }

    .hero-info {
        font-size: 3vh;
    }

    .uppercap {
        font-size: 5vh;
    }

    .nav-link {
        font-size: small;
    }

    .subscribe-icon {
        font-size: large;
    }

    .subscribe-header {
        font-size: smaller;
    }

    .subscribe-icon {
        font-size: medium;
    }

    .input-email {
        height: 30px;
    }

    .shop-now-btn, .btn-warning,
    .btn-dark, .btn-danger,
    .btn-info, .btn-black,
    .btn-outline-black,
    .btn-back {
        font-size: smaller;
    }

    .footer-background {
        text-align: center;
    }

    .footer {
        text-align: center;
    }

    .copyright {
        display: none;
    }

    .copyright span, .links span, .social span {
        font-size: small;
        padding-bottom: 5px;
        margin-bottom: 10px;
    }

    .copyright li p {
        font-size: small;
    }

    .links li a {
        font-size: small;
        padding: 10px;
        margin: 10px;
    }

    .social li a {
        font-size: large;
        padding: 15px 15px;
    }

    .social {
        margin-top: 10px;
    }
    
    .links, .social {
        float: none;
    }

    footer ul li {
        display: contents;
    }
    
    .copyright, .links, .social {
        padding: 0;
    }

    .socia li {
        display: inline;
        padding: 5px;
    }

    .games {
        margin-right: 0;
    }

    .shop-now-btn, .btn-warning,
    .btn-dark, .btn-danger,
    .btn-info, .btn-black ,
    .btn-outline-black, .btn-back {
        font-size: medium;
    }
}

@media (max-width:460px) {
    /* .header {
        margin-top: 10vh;
    } */

    .nav-link {
        display: inline-block;
        font-size: xx-small;
    }

    .btn-file {
        width: 75vw;
    }

    .delivery-banner {
        font-size: medium;
    }

    .mob-nav {
        width: 75%;
        display: inline;
    }

    .navbar-expand-lg {
        padding: inherit;
    }

    .dropdown-item {
        font-size: smaller;
    }

    .lead {
        font-size: smaller;
    }

    .shop-now-btn, .btn-warning,
    .btn-dark, .btn-danger,
    .btn-info, .btn-black,
    .btn-outline-black,
    .btn-back {
        font-size: small;
    }
}

